src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImGuiInputTextCallbackData_t ImGuiInputTextCallbackData;        
typedef int ImGuiDataType;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiInputTextFlags;    
typedef int ImGuiSliderFlags;       
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData* data);  
CIMGUI_API bool ImGui_DragFloat(const char* label, float* v, float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );                                          
CIMGUI_API bool ImGui_DragFloat2(const char* label, float v[2], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat3(const char* label, float v[3], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat4(const char* label, float v[4], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloatRange2(const char* label, float* v_current_min, float* v_current_max, float v_speed , float v_min , float v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt(const char* label, int* v, float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );                                                          
CIMGUI_API bool ImGui_DragInt2(const char* label, int v[2], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt3(const char* label, int v[3], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt4(const char* label, int v[4], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragIntRange2(const char* label, int* v_current_min, int* v_current_max, float v_speed , int v_min , int v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalar(const char* label, ImGuiDataType data_type, void* p_data, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat(const char* label, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );                                                        
CIMGUI_API bool ImGui_SliderFloat2(const char* label, float v[2], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat3(const char* label, float v[3], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat4(const char* label, float v[4], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderAngle(const char* label, float* v_rad, float v_degrees_min , float v_degrees_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt(const char* label, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt2(const char* label, int v[2], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt3(const char* label, int v[3], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt4(const char* label, int v[4], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderFloat(const char* label, ImVec2 size, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderInt(const char* label, ImVec2 size, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderScalar(const char* label, ImVec2 size, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_InputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputTextMultiline(const char* label, char* buf, size_t buf_size, ImVec2 size , ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputFloat(const char* label, float* v, float step , float step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat2(const char* label, float v[2], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat3(const char* label, float v[3], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat4(const char* label, float v[4], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt(const char* label, int* v, int step , int step_fast , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt2(const char* label, int v[2], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt3(const char* label, int v[3], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt4(const char* label, int v[4], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputDouble(const char* label, double* v, double step , double step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_ColorEdit3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorEdit4(const char* label, float col[4], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker4(const char* label, float col[4], ImGuiColorEditFlags flags , const float* ref_col );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiSliderFlags_None            = 0,
    ImGuiSliderFlags_Logarithmic     = 1<<5,        
    ImGuiSliderFlags_NoRoundToFormat = 1<<6,        
    ImGuiSliderFlags_NoInput         = 1<<7,        
    ImGuiSliderFlags_WrapAround      = 1<<8,        
    ImGuiSliderFlags_ClampOnInput    = 1<<9,        
    ImGuiSliderFlags_ClampZeroRange  = 1<<10,       
    ImGuiSliderFlags_NoSpeedTweaks   = 1<<11,       
    ImGuiSliderFlags_AlwaysClamp     = ImGuiSliderFlags_ClampOnInput | ImGuiSliderFlags_ClampZeroRange,
    ImGuiSliderFlags_InvalidMask_    = 0x7000000F,  
} ImGuiSliderFlags_;
struct ImGuiInputTextCallbackData_t
{
    ImGuiContext*       Ctx;             
    ImGuiInputTextFlags EventFlag;       
    ImGuiInputTextFlags Flags;           
    void*               UserData;        
    ImWchar             EventChar;       
    ImGuiKey            EventKey;        
    char*               Buf;             
    int                 BufTextLen;      
    int                 BufSize;         
    bool                BufDirty;        
    int                 CursorPos;       
    int                 SelectionStart;  
    int                 SelectionEnd;    
};