src/cimgui_ext/include/cimgui_ext.h

CIMGUI_API int igExtPlot(int plotType, const char* label, float (*values_getter)(void* data, int idx), int (*get_tooltip)(void* data, int idx, char* buffer), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, float size_x, float size_y);
CIMGUI_API int igExtInputFloat(const char* label, float* v, float step, float step_fast, const char* format, int flags);
CIMGUI_API int igExtInputFloat2(const char* label, float v[2], const char* format, int flags);
CIMGUI_API int igExtInputFloat3(const char* label, float v[3], const char* format, int flags);
CIMGUI_API int igExtInputFloat4(const char* label, float v[4], const char* format, int flags);
CIMGUI_API int igExtInputInt(const char* label, int* v, int step, int step_fast, int flags);
CIMGUI_API int igExtInputInt2(const char* label, int v[2], int flags);
CIMGUI_API int igExtInputInt3(const char* label, int v[3], int flags);
CIMGUI_API int igExtInputInt4(const char* label, int v[4], int flags);
CIMGUI_API int igExtInputDouble(const char* label, double* v, double step, double step_fast, const char* format, int flags);