src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// <para>Widgets: Drag Sliders</para>
    /// <para>- CTRL+Click on any drag box to turn them into an input box. Manually input values aren't clamped by default and can go off-bounds. Use ImGuiSliderFlags_AlwaysClamp to always clamp.</para>
    /// <para>- For all the Float2/Float3/Float4/Int2/Int3/Int4 versions of every function, note that a 'float v[X]' function argument is the same as 'float* v',</para>
    /// <para>the array syntax is just a way to document the number of elements that are expected to be accessible. You can pass address of your first element out of a contiguous set, e.g. &amp;myvector.x</para>
    /// <para>- Adjust format string to decorate the value with a prefix, a suffix, or adapt the editing and display precision e.g. "%.3f" -&gt; 1.234; "%5.2f secs" -&gt; 01.23 secs; "Biscuit: %.0f" -&gt; Biscuit: 1; etc.</para>
    /// <para>- Format string may also be set to NULL or use the default format ("%f" or "%d").</para>
    /// <para>- Speed are per-pixel of mouse movement (v_speed=0.2f: mouse needs to move by 5 pixels to increase value by 1). For keyboard/gamepad navigation, minimum speed is Max(v_speed, minimum_step_at_given_precision).</para>
    /// <para>- Use v_min &lt; v_max to clamp edits to given limits. Note that CTRL+Click manual input can override those limits if ImGuiSliderFlags_AlwaysClamp is not used.</para>
    /// <para>- Use v_max = FLT_MAX / INT_MAX etc to avoid clamping to a maximum, same with v_min = -FLT_MAX / INT_MIN to avoid clamping to a minimum.</para>
    /// <para>- We use the same sets of flags for DragXXX() and SliderXXX() functions as the features are the same and it makes it easier to swap them.</para>
    /// <para>- Legacy: Pre-1.78 there are DragXXX() function signatures that take a final `float power=1.0f' argument instead of the `ImGuiSliderFlags flags=0' argument.</para>
    /// <para>If you get a warning converting a float to ImGuiSliderFlags, read https://github.com/ocornut/imgui/issues/3361</para>
    /// If v_min &gt;= v_max we have no bound
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_DragFloat(byte* label, float* v, float v_speed, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragFloat2(byte* label, float* v, float v_speed, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragFloat3(byte* label, float* v, float v_speed, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragFloat4(byte* label, float* v, float v_speed, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragFloatRange2(byte* label, float* v_current_min, float* v_current_max, float v_speed, float v_min, float v_max, byte* format, byte* format_max, ImGuiSliderFlags flags);

    /// <summary>
    /// If v_min &gt;= v_max we have no bound
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_DragInt(byte* label, int* v, float v_speed, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragInt2(byte* label, int* v, float v_speed, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragInt3(byte* label, int* v, float v_speed, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragInt4(byte* label, int* v, float v_speed, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragIntRange2(byte* label, int* v_current_min, int* v_current_max, float v_speed, int v_min, int v_max, byte* format, byte* format_max, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragScalar(byte* label, ImGuiDataType data_type, IntPtr p_data, float v_speed, IntPtr p_min, IntPtr p_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_DragScalarN(byte* label, ImGuiDataType data_type, IntPtr p_data, int components, float v_speed, IntPtr p_min, IntPtr p_max, byte* format, ImGuiSliderFlags flags);

    /// <summary>
    /// <para>Widgets: Regular Sliders</para>
    /// <para>- CTRL+Click on any slider to turn them into an input box. Manually input values aren't clamped by default and can go off-bounds. Use ImGuiSliderFlags_AlwaysClamp to always clamp.</para>
    /// <para>- Adjust format string to decorate the value with a prefix, a suffix, or adapt the editing and display precision e.g. "%.3f" -&gt; 1.234; "%5.2f secs" -&gt; 01.23 secs; "Biscuit: %.0f" -&gt; Biscuit: 1; etc.</para>
    /// <para>- Format string may also be set to NULL or use the default format ("%f" or "%d").</para>
    /// <para>- Legacy: Pre-1.78 there are SliderXXX() function signatures that take a final `float power=1.0f' argument instead of the `ImGuiSliderFlags flags=0' argument.</para>
    /// <para>If you get a warning converting a float to ImGuiSliderFlags, read https://github.com/ocornut/imgui/issues/3361</para>
    /// adjust format to decorate the value with a prefix or a suffix for in-slider labels or unit display.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_SliderFloat(byte* label, float* v, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderFloat2(byte* label, float* v, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderFloat3(byte* label, float* v, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderFloat4(byte* label, float* v, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderAngle(byte* label, float* v_rad, float v_degrees_min, float v_degrees_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderInt(byte* label, int* v, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderInt2(byte* label, int* v, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderInt3(byte* label, int* v, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderInt4(byte* label, int* v, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderScalar(byte* label, ImGuiDataType data_type, IntPtr p_data, IntPtr p_min, IntPtr p_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_SliderScalarN(byte* label, ImGuiDataType data_type, IntPtr p_data, int components, IntPtr p_min, IntPtr p_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_VSliderFloat(byte* label, System.Numerics.Vector2 size, float* v, float v_min, float v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_VSliderInt(byte* label, System.Numerics.Vector2 size, int* v, int v_min, int v_max, byte* format, ImGuiSliderFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_VSliderScalar(byte* label, System.Numerics.Vector2 size, ImGuiDataType data_type, IntPtr p_data, IntPtr p_min, IntPtr p_max, byte* format, ImGuiSliderFlags flags);

    /// <summary>
    /// <para>Widgets: Input with Keyboard</para>
    /// <para>- If you want to use InputText() with std::string or any custom dynamic string type, see misc/cpp/imgui_stdlib.h and comments in imgui_demo.cpp.</para>
    /// - Most of the ImGuiInputTextFlags flags are only useful for InputText() and not for InputFloatX, InputIntX, InputDouble etc.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_InputText(byte* label, IntPtr buf, nint buf_size, ImGuiInputTextFlags flags, delegate* unmanaged<ImGuiInputTextCallbackData*, int> callback, IntPtr user_data);

    [DllImport("cimgui")]
    public static extern byte ImGui_InputTextMultiline(byte* label, IntPtr buf, nint buf_size, System.Numerics.Vector2 size, ImGuiInputTextFlags flags, delegate* unmanaged<ImGuiInputTextCallbackData*, int> callback, IntPtr user_data);

    [DllImport("cimgui")]
    public static extern byte ImGui_InputTextWithHint(byte* label, byte* hint, IntPtr buf, nint buf_size, ImGuiInputTextFlags flags, delegate* unmanaged<ImGuiInputTextCallbackData*, int> callback, IntPtr user_data);

    [DllImport("cimgui", EntryPoint="igExtInputFloat")]
    public static extern byte ImGui_InputFloat(byte* label, float* v, float step, float step_fast, byte* format, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputFloat2")]
    public static extern byte ImGui_InputFloat2(byte* label, float* v, byte* format, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputFloat3")]
    public static extern byte ImGui_InputFloat3(byte* label, float* v, byte* format, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputFloat4")]
    public static extern byte ImGui_InputFloat4(byte* label, float* v, byte* format, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputInt")]
    public static extern byte ImGui_InputInt(byte* label, int* v, int step, int step_fast, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputInt2")]
    public static extern byte ImGui_InputInt2(byte* label, int* v, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputInt3")]
    public static extern byte ImGui_InputInt3(byte* label, int* v, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputInt4")]
    public static extern byte ImGui_InputInt4(byte* label, int* v, ImGuiInputTextFlags flags);

    [DllImport("cimgui", EntryPoint="igExtInputDouble")]
    public static extern byte ImGui_InputDouble(byte* label, double* v, double step, double step_fast, byte* format, ImGuiInputTextFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_InputScalar(byte* label, ImGuiDataType data_type, IntPtr p_data, IntPtr p_step, IntPtr p_step_fast, byte* format, ImGuiInputTextFlags flags);

    /// <summary>
    /// <para>Widgets: Color Editor/Picker (tip: the ColorEdit* functions have a little color square that can be left-clicked to open a picker, and right-clicked to open an option menu.)</para>
    /// <para>- Note that in C++ a 'float v[X]' function argument is the _same_ as 'float* v', the array syntax is just a way to document the number of elements that are expected to be accessible.</para>
    /// - You can pass the address of a first float element out of a contiguous structure, e.g. &amp;myvector.x
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_ColorEdit3(byte* label, float* col, ImGuiColorEditFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_ColorEdit4(byte* label, float* col, ImGuiColorEditFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_ColorPicker3(byte* label, float* col, ImGuiColorEditFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_ColorPicker4(byte* label, float* col, ImGuiColorEditFlags flags, float* ref_col);
